Bug 149969 - FILEOPEN PPTX: video stops after one iteration instead of playing in loop
Summary: FILEOPEN PPTX: video stops after one iteration instead of playing in loop
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: filter:pptx
Depends on:
Blocks: Media-Playback PPTX
  Show dependency treegraph
 
Reported: 2022-07-13 05:42 UTC by Gerald Pfeifer
Modified: 2026-01-20 18:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (10.77 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-07-13 05:42 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2022-07-13 05:42:22 UTC
Created attachment 181242 [details]
Sample slide (PPTX)

PowerPoint online plays the video on the sample slide in an endless
loop, whereas Impress stops after one iteration.

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: a93d7e7df6804cd6f1f2fa1ef0e6e95ce6c3752a
CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US

...and all the way back to LibreOffice 6.4 at least.
Comment 1 Timur 2022-07-13 15:10:21 UTC
"Loop until stopped" from MSO not read. I guess that's Effect-Timing-Repeat.
Not convenient file, I had crashes with it, large MP4.
Comment 2 raal 2022-07-13 15:21:19 UTC
Confirm with Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: a93d7e7df6804cd6f1f2fa1ef0e6e95ce6c3752a
CPU threads: 4; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

in slide1.xml is repeatCount="indefinite"
Comment 3 Commit Notification 2022-09-02 10:31:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d0176d65de40b1ea53b4fcbc0f607911fa64d8e5

tdf#149969 slideshow: handle loop from the animation of a media shape

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-09-02 13:43:01 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/38671e21d7dbcd5019912b9468305018de0c922e

Related: tdf#149969 PPTX export: add loop from the animation of a media shape

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2022-09-02 14:07:07 UTC
I think this is now fixed on master.
Comment 6 Commit Notification 2022-09-05 10:51:39 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/c0565975c47e212e093ca9f2663b94decc8b6636

tdf#149969 slideshow: handle loop from the animation of a media shape

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-09-05 10:54:48 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/8e70b8e64a1a5bdd231b0c41c93aaac18f5d0e66

Related: tdf#149969 PPTX export: add loop from the animation of a media shape

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Timur 2022-09-16 13:11:57 UTC
Hi Miklos, video plays now. 
Please explain should Sidebar-Animation Effect-Options-Timing-Repeat Until... be checked on fileopen.
Comment 9 Miklos Vajna 2022-09-19 07:11:50 UTC
I think ideally the UI should show that the effect's repeat count is indefinite (and with a quick check, it seems it doesn't do that), but I didn't touch the UI for this bug. The scope is just FILEOPEN here. (FILESAVE does work, though.)
Comment 10 Gerald Pfeifer 2022-10-05 12:27:19 UTC
(In reply to Miklos Vajna from comment #9)
> I think ideally the UI should show that the effect's repeat count is
> indefinite (and with a quick check, it seems it doesn't do that), but I
> didn't touch the UI for this bug. The scope is just FILEOPEN here. (FILESAVE
> does work, though.)

I was going to file a bug for that and noticed Timur kindly already
did so: bug #151245.