Related: tdf#149969 PPTX export: add loop from the animation of a media shape

The PPTX import maps media nodes to XAudio nodes, but the export side in
PPTXAnimationExport::WriteAnimationNodeAudio() only handled audio, not
video.

This is fine, that code was added for audio narration purposes, but the
same animation handles looping for videos, so this needs extending.

Fix the problem by exporting <p:audio> conditionally and write video
markup (especially info about repeat count) when the content of the
media shape is video, not audio.

Change-Id: Iba6bb4901b984c4363023f05232efc06ff069022
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139261
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins